# MultiModal-RAG

./: .env.local.example  .env.server.example  .gitignore  CLAUDE.md  Multimodal_RAG_Build_Plan.md  README.md  pyproject.toml
data/samples/: sample.docx  sample.md  sample.pptx
src/multimodal_rag/: __init__.py  config.py  device.py  env_check.py
src/multimodal_rag/ingestion/: __init__.py  docx.py  markdown.py  pdf.py  pptx.py  schema.py  tables.py  vision.py
src/multimodal_rag/providers/: base.py  embeddings.py  factory.py  llm.py
tests/: test_device.py  test_smoke.py
tests/ingestion/: test_dispatcher.py  test_docx.py  test_markdown.py  test_pdf.py  test_pptx.py  test_tables.py  test_vision.py
tests/providers/: test_base.py  test_embeddings.py  test_factory.py  test_llm.py
