[project]
name = "multimodal-rag"
version = "0.1.0"
description = "A multimodal technical RAG system, built step by step as a learning project."
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.92.0",
    "markdown-it-py>=4.2.0",
    "pydantic-settings>=2.14.2",
    "python-docx>=1.2.0",
    "python-magic>=0.4.27",
    "python-pptx>=1.0.2",
    "sentence-transformers>=5.6.0",
    "unstructured[pdf]>=0.24.1",
]

[project.scripts]
multimodal-rag = "multimodal_rag:main"

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Sensible starting rule set: pyflakes, pycodestyle, isort, pyupgrade, bugbear.
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
packages = ["multimodal_rag"]
plugins = ["pydantic.mypy"]
# Strict-ish but not punishing: catch real bugs without demanding
# type annotations everywhere on day one.
disallow_untyped_defs = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true

# Third-party libs below ship no (or incomplete) type stubs.
[[tool.mypy.overrides]]
module = ["litellm.*", "sentence_transformers.*"]
ignore_missing_imports = true
